--- a/styles/style.css
+++ b/styles/style.css
@@ -4,7 +4,90 @@ dark blue: #06365f
 light blue: #1c5380
 */
 
+* {
+  /* outline: solid 1px red; */
+}
+
 body {
+  background-image: url("./images/bgtile.png");
+  background-size: contain;
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  /* background-color: #1c5380; */
 }
+
+main {
+  margin: 150px;
+  display: flex;
+  justify-content: space-around;
+}
+
+section.header-and-content-container {
+  margin: 50px;
+  padding: 30px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  background-color: white;
+  border-radius: 10px;
+}
+
+header {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+#login-button {
+  margin: 10px;
+  display: flex;
+  align-items: center;
+}
+
+#login-button > * {
+  margin: 5px;
+}
+
+
+#link-container {
+  display: flex;
+  justify-content: flex-start;
+}
+
+#link-container a {
+  margin: 10px 5px 10px 20px;
+}
+
+#heading-content {
+  width: 30%;
+  color: #06365f;
+}
+
+#login-button p {
+  font-weight: 800;
+  /* font-size: */
+  color: #1c5380;
+  /* background-color: pink; */
+}
+
+footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+footer a {
+  margin: 10px;
+  text-transform: uppercase;
+  text-decoration: none;
+  color: #1c5380;
+  font-weight: 600;
+}
+
+footer p {
+  margin: 20px;
+  color: grey;
+}
+
+
+
