--- a/styles/style.css
+++ b/styles/style.css
@@ -5,8 +5,12 @@ light blue: #1c5380
 */
 
 body {
+  max-width: 990px;
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+}
+.placeHolder{
+  width: 460px;
 }
 footer{
   justify-content: space-between;
@@ -16,8 +20,21 @@ main{
   display: flex;
 }
 #mainContent{
+  padding: 10px;
 background-image: url("../images/frame.png");
+align-items: center;
+background-repeat: repeat-y;
 }
 header{
   justify-content: space-between;
+}
+.downloadButton{
+  border: none;
+}
+.login{
+  background-color: #6e92b0;
+}
+h2{
+  font-size: large;
+  color: #10375d;
 }
