--- a/styles/style.css
+++ b/styles/style.css
@@ -5,9 +5,14 @@ light blue: #1c5380
 */
 
 body {
+  padding-top: 200px ;
   max-width: 990px;
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  }
+.box{  width: max-content;
+  height: 250px;
+  background-image: linear-gradient(to right top, #6681a0, #4b6788);
 }
 .placeHolder{
   width: 460px;
@@ -24,6 +29,7 @@ main{
 background-image: url("../images/frame.png");
 align-items: center;
 background-repeat: repeat-y;
+height: 200px;
 }
 header{
   justify-content: space-between;
