--- a/styles/style.css
+++ b/styles/style.css
@@ -7,4 +7,91 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background: linear-gradient(
+    180deg,
+    rgba(28, 83, 128, 0.849) 25%,
+    #06365f 35%,
+    white 35%
+  );
+  background-repeat: no-repeat;
+}
+
+main {
+  display: flex;
+  justify-content: space-between;
+  width: 80%;
+  margin: 10% auto;
+}
+
+#main-image {
+  margin-right: 30px;
+}
+
+header {
+  display: flex;
+  box-sizing: border-box;
+  justify-content: space-between;
+  align-items: center;
+  margin: 10px;
+}
+
+header button {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background: linear-gradient(180deg, #91b2cf4f 20%, #1c5380 90%);
+  color: hsla(213, 20%, 89%, 1);
+  width: 90px;
+  height: 40px;
+  padding: 10px;
+  border: 1px solid #1c5380;
+  border-radius: 5px;
+  box-shadow: 0px 0px 0px 0px #1c5380;
+}
+
+h1 {
+  color: #06365f;
+}
+
+section {
+  display: flex;
+  box-sizing: border-box;
+  justify-content: space-between;
+  flex-direction: column;
+  background-image: url("../images/frame.png");
+  background-repeat: no-repeat;
+  background-size: 100%;
+  padding: 20px 50px 0;
+}
+
+#buttons {
+  display: flex;
+  justify-content: flex-start;
+}
+
+#buttons a {
+  margin-right: 20px;
+}
+
+footer {
+  display: flex;
+  justify-content: center;
+}
+
+footer ul {
+  display: flex;
+  justify-content: space-between;
+  width: 60%;
+}
+
+ul li {
+  list-style: none;
+  text-transform: uppercase;
+  font-size: 0.8em;
+}
+
+li a {
+  color: #1c5380;
+  text-decoration: none;
+  font-weight: 500;
 }
