--- a/styles/style.css
+++ b/styles/style.css
@@ -3,8 +3,79 @@ Colors to use:
 dark blue: #06365f
 light blue: #1c5380
 */
-
+html {
+  padding: 0;
+  margin: 0;
+}
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  text-align: center;
+}
+
+#background {
+  position:absolute;
+  background: linear-gradient(rgb(80, 162, 255), rgb(24, 92, 124));
+  width: 100%;
+  height: 40%;
+}
+
+section {
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  top: 20%;
+ 
+  margin: 0 10%;  
+}
+
+.header {
+  width: 40%;
+  display: flex;
+  justify-content: space-between;
+  height: 10%;
+  margin-left: 30%;
+}
+.header button {
+  margin-top: 14px;
+  color:white;
+  background: linear-gradient(rgb(80, 162, 255), rgb(24, 92, 124));
+  width: 20%;
+  height:50%;
+  border:2px;
+}
+
+.text-container {
+  background-color: aliceblue;
+  color: #06365f;
+}
+.text-container p{
+  width: 60%;
+  background-color: white;
+  border:2px solid grey;
+  margin-left: 200px;
+}
+.main button{
+  border:none;
+  background-color: transparent;
+}
+footer ul {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 2.5rem;
+  display: flex;
+ justify-content: center;
+ margin:0 50px;
+}
+
+footer ul il {
+  color:#06365f;
+font-weight: bolder;
+  margin: 0 10px;
+
+}
+
+#copyright{
+  color:rgb(158, 157, 157);
 }
