--- a/styles/style.css
+++ b/styles/style.css
@@ -4,7 +4,71 @@ dark blue: #06365f
 light blue: #1c5380
 */
 
+*{
+  border: 1px solid red;
+  }
+
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background: linear-gradient(180deg, #1c5380 50%, #fff 50%);
+}
+
+.container{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  padding-top: 10%;
+}
+
+.mobile-img{
+  display: flex;
+  flex-direction: row;
+  justify-content: right;
+  width: 50%;
+}
+
+.login-menu-and-infos{
+  display: inline-flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 60%;
+}
+
+.login-and-logo{
+  display: inline-flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.login-and-logo img{
+  width: 60%;
+  margin-right: 40px;
+}
+
+.button-login{
+  background: linear-gradient(180deg, #fff 0,5%, #1c5380 90%);
+  background-image: url(../images/home.png);
+  background-repeat: no-repeat;
+  background-position: center left 2px;
+  text-align: right;
+  padding-right: 20px;
+  width: 110px;
+  height: 40px;
+  font-weight: 900;
+  font-size: 15px;
+  box-shadow: 0 0 1em #06365f;
+}
+
+.text-infos{
+  display: inline-flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  background-image: url(../images/frame.png);
+  background-repeat: no-repeat;
+  background-size: 600px;
+  background-position: center;
+
 }
