--- a/styles/style.css
+++ b/styles/style.css
@@ -4,9 +4,6 @@ dark blue: #06365f
 light blue: #1c5380
 */
 
-/* *{
-  border: 1px solid red;
-  } */
 
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -41,7 +38,7 @@ body {
 }
 
 .mobile-img img{
-  width: 255px;
+  width: 310px;
   margin-right: 3em;
 
   transform: translateY(-1em);
@@ -53,8 +50,7 @@ body {
 
 header{
   display: flex;
-  align-items: center;
-
+  justify-content: space-around;
 }
 
 .login-and-logo{
@@ -65,14 +61,14 @@ header{
 
 .login-and-logo img{
   width: 250px;
-  margin-right: 40px;
+  margin-right: 100px;
 }
 
 .button-login{
   background: linear-gradient(180deg, #fff 0,5%, #1c5380 90%);
   background-image: url(../images/home.png);
   background-repeat: no-repeat;
-  background-position: center left 2px;
+  background-position: center left 5px;
   text-align: right;
   padding-right: 20px;
   width: 110px;
@@ -127,3 +123,19 @@ section{
   padding-top: 28px;
 }
 
+footer li{
+  display: inline-flex;
+  justify-content: center;
+  list-style: none;
+  text-align: center;
+  margin-right: 3px;
+  padding-left: 25px;
+}
+
+footer a{
+  text-align: center;
+  text-decoration: none;
+  color: #1c5380;
+  font-size: 12px;
+  font-weight: 900;
+}
