--- a/styles/style.css
+++ b/styles/style.css
@@ -7,4 +7,117 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background: linear-gradient(#397fb8, #06365f);
+  background-size: 100% 50%;
+  background-repeat: no-repeat;
+}
+
+main {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 65vw;
+}
+
+.container {
+  display: flex;
+}
+.container-logo-text {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-left: 50px;
+}
+
+.logo {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 30px;
+  width: 95%;
+}
+
+.logo a {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  width: 120px;
+  height: 50px;
+  text-align: center;
+  border-radius: 5px;
+  box-shadow: 0px 0px 3px black;
+  text-decoration: none;
+  color: white;
+  font-size: 18px;
+  font-weight: 900;
+}
+
+.text-home {
+  background-color: white;
+  border-radius: 5px;
+  color: rgb(85, 85, 85);
+  height: 75%;
+  padding: 25px;
+  margin-left: 30px;
+  box-shadow: 0px 0px 7px black;
+  width: 90%;
+}
+
+.bold-text {
+  font-weight: bold;
+}
+
+.text-home h1 {
+  font-size: 1.8em;
+  width: 58%;
+  color: #1c5380;
+}
+
+.container-downloads {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  margin-top: 20px;
+  width: 400px;
+}
+
+.container-downloads img {
+  width: 150px;
+}
+
+.footer-nav {
+  margin-top: 30px;
+  display: flex;
+  justify-content: space-evenly;
+  width: 60vw;
+}
+
+.footer-nav ul {
+  list-style-type: none;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+}
+
+.footer-nav a {
+  text-decoration: none;
+  font-weight: bold;
+  color: #2877b8;
+}
+
+.footer-nav li {
+  display: inline;
+}
+
+.trademark {
+  color: rgb(158, 158, 158);
+  font-size: 12px;
+  font-weight: bold;
 }
