--- a/styles/style.css
+++ b/styles/style.css
@@ -4,7 +4,87 @@ dark blue: #06365f
 light blue: #1c5380
 */
 
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  padding: 150px;;
 }
+
+body {
+  display: flex;
+  flex-direction: column;
+  background: url("../images/bgtile.png");
+  background-repeat: repeat-x;
+}
+
+.wrapper {
+  display: flex;
+  justify-content: center;
+}
+
+.phones {
+  margin-right: 50px;
+}
+
+header { 
+  display: flex;
+  justify-content: space-between;
+  margin-top: 20px;
+}
+
+.log-in {
+  display: flex;
+  align-items: center;
+  border: 1px black solid;
+  margin-top: 25px;
+  height: 40px;
+  padding: 10px;
+}
+
+.background-section {
+  background-color: white;
+  padding: 20px 50px;
+  border-radius: 5px;
+  width: 500px;
+}
+
+article p {
+  line-height: 1.5;
+}
+
+.log-in a {
+  text-decoration: none;
+  color: white;
+}
+
+.log-in img {
+  position: relative;
+  top: 5px;
+  padding-right: 5px;
+}
+
+.apps img {
+  margin-right: 10px;
+}
+
+footer ul {
+  display: flex;
+  justify-content: center;
+  list-style-type:none;
+  margin-top: 40px;
+  
+}
+
+footer ul a {
+  text-decoration: none;
+  margin: 10px;
+}
+
+
+
