--- a/styles/style.css
+++ b/styles/style.css
@@ -4,7 +4,64 @@ dark blue: #06365f
 light blue: #1c5380
 */
 
+*{
+  margin: 0;
+  padding: 0;
+}
+
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+
+nav {
+  width: 60%;
+}
+
+nav ul {
+  list-style: none;
+  text-transform: uppercase;
+}
+
+.box {
+  width: 70%;
+  margin-left: 250px;
+  margin-top: 50px;
+}
+
+.container {
+  margin-bottom: 50px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.navigation ul {
+  display: flex;
+  justify-content: space-between;
+}
+
+.movil {
+  width: 200px;
+}
+
+.articulo {
+  width: 600px;
+}
+
+.boton_box {
+  display: flex;
+  justify-content: space-between;
+}
+
+.boton {
+  display: flex;
+}
+
+section img {
+  margin-right: 20px;
+}
+
+p {
+  margin-bottom: 15px;
+}
+
